--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,13 @@
-<html>
-    <head>
-        <title> K0rgana's (Django) Blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">K0rgana's (Django) Blog</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
 
-        {% for post in posts %}
-		    <div>
-		        <p>published: {{ post.published_date }}</p>
-		        <h2><a href="">{{ post.title }}</a></h2>
-		        <p>{{ post.text|linebreaksbr }}</p>
-		    </div>
-		{% endfor %}
-
-    </body>
-</html>
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaksbr }}</p>
+			<div class="date">
+			    <p>published: {{ post.published_date }}</p>
+			</div>
+		</div>
+	{% endfor %}
+{% endblock %}
